--- a/mysite/polls/templates/polls/login.html
+++ b/mysite/polls/templates/polls/login.html
@@ -43,7 +43,7 @@
 
 											<div class="space-6"></div>
 
-											<form id="formId" action="/polls/validate_login/" method="post" >
+											<form id="formId" action="/polls/login/" method="post" >
                                                 {% csrf_token %}
 												<fieldset>
 													<label class="block clearfix">
@@ -82,8 +82,8 @@
 	</body>
 	<script type="text/javascript">
 		$(function(){
-			var errorinfo='${error}';
-			if(errorinfo=='error'){
+			var errorinfo ={{ isSuccess }}
+			if(errorinfo=='1'){
 				layer.tips('用户名或密码错误', '#username');
 			}
 		});
